@@ -1,4 +1,8 @@
 -*- text -*-
+GASP now correctly parses floating point numbers. Unless the base is explicitly
+specified, they are interpreted as decimal numbers regardless of the currently
+specified base.
+
 Support for the OpenRISC 32-bit embedded processor by OpenCores.
 
 The ARM assembler now accepts -march=..., -mcpu=... and -mfpu=... for
